refactor: deploying to vercel

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "serverless-http": "^3.2.0"
   },
   "scripts": {
-  "start": "node index.js"
-}
+    "start": "node dev-server.js",
+    "dev": "node dev-server.js"
+  }
 }
