--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
+    "autoprefixer": "^10.4.21",
     "ethers": "^6.14.3",
     "hardhat": "^2.24.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
+    "@pinata/sdk": "^2.1.0",
+    "@vitejs/plugin-react": "^4.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "serverless-http": "^3.2.0"
   },
   "scripts": {
-    "start": "node dev-server.js",
-    "dev": "node dev-server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
