--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,28 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "installCommand": "npm install",
+        "buildCommand": "npm run build", 
+        "outputDirectory": "dist"
+      }
+    },
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/index.js" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api" 
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html" 
+    }
   ]
 }
