--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@openzeppelin/contracts": "^5.3.0",
     "@pinata/sdk": "^2.1.0",
     "@vitejs/plugin-react": "^4.5.1",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
